--- a/code/index.html
+++ b/code/index.html
@@ -45,6 +45,7 @@
 <script type="text/javascript" src="bower_components/Chart.js/Chart.js"></script>
 <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/js/highcharts.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/js/highcharts-more.js"></script>
 <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 <script type="text/javascript" src="bower_components/topojson/topojson.js"></script>
 
@@ -59,6 +60,7 @@
 <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 <script type="text/javascript" src="bower_components/ui-select/dist/select.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 
 <script type="text/javascript" src="bower_components/highlightjs/highlight.pack.js"></script>
 <script type="text/javascript" src="bower_components/angular-highlightjs/src/angular-highlightjs.js"></script>
