--- a/code/parts/domains/domain-select/domain-select.html
+++ b/code/parts/domains/domain-select/domain-select.html
@@ -5,6 +5,6 @@
            style="min-width: 300px;" >
   <ui-select-match placeholder="Select Domain">{{$select.selected.domain_name}}</ui-select-match>
   <ui-select-choices repeat="item in domains | filter: {domain_name: $select.search}">
-    <small>{{item.domain_name}}</small>
+    <div ng-bind-html="item.domain_name|highlight: $select.search"></div>
   </ui-select-choices>
 </ui-select>
