--- a/code/parts/menu/mobile-analitycs-side.html
+++ b/code/parts/menu/mobile-analitycs-side.html
@@ -14,3 +14,7 @@
   <i class="glyphicon glyphicon-stats"></i>
   Traffic Distributions
 </a>
+<a ui-sref-active="active" ui-sref="index.mobile.ab" class="side-menu-item">
+  <i class="glyphicon glyphicon-random"></i>
+  A/B Reports
+</a>
