--- a/code/parts/reports/mobile-ab.html
+++ b/code/parts/reports/mobile-ab.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <h2>Traffic Levels</h2>
+      <h2>A/B Reports</h2>
     </div>
   </div>
 
@@ -27,35 +27,7 @@
 
           <div class="row">
             <div class="col-lg-12">
-              <div mobile-rps-chart
-                   ng-account="account"
-                   ng-app="application.app_id"
-                   fl-oses="oses"
-                   fl-devices="devices"
-                   fl-countries="countries"
-                   fl-operators="operators"
-                   fl-networks="networks"></div>
-            </div>
-          </div>
-          <hr>
-
-          <div class="row">
-            <div class="col-lg-12">
-              <div mobile-bw-chart
-                   ng-account="account"
-                   ng-app="application.app_id"
-                   fl-oses="oses"
-                   fl-devices="devices"
-                   fl-countries="countries"
-                   fl-operators="operators"
-                   fl-networks="networks"></div>
-            </div>
-          </div>
-          <hr>
-
-          <div class="row">
-            <div class="col-lg-12">
-              <div mobile-http-codes-chart
+              <div mobile-ab-fbt-chart
                    ng-account="account"
                    ng-app="application.app_id"
                    fl-oses="oses"
