--- a/code/dev/parts/reports/mobile-ab.html
+++ b/code/dev/parts/reports/mobile-ab.html
@@ -37,6 +37,22 @@
                    fl-networks="networks"></div>
             </div>
           </div>
+          <hr>
+
+          <div class="row">
+            <div class="col-lg-12">
+              <div mobile-ab-fbt-distribution-chart
+                   ng-account="account"
+                   ng-app="application.app_id"
+                   fl-oses="oses"
+                   fl-devices="devices"
+                   fl-countries="countries"
+                   fl-operators="operators"
+                   fl-networks="networks"
+                   fl-interval="50"
+                   fl-limit="3000"></div>
+            </div>
+          </div>
 
         </div>
       </div>
