--- a/code/dev/parts/auth/login.html
+++ b/code/dev/parts/auth/login.html
@@ -49,6 +49,6 @@
       </form>
       <div class="clearfix"></div>
     </div>
-    <span class="footerNoteA">®2015 Rev Software, Inc.</span>
+    <span class="footerNoteA">®2015-2016 Rev Software, Inc.</span>
   </div>
 </section>
