--- a/code/index.html
+++ b/code/index.html
@@ -45,6 +45,7 @@
 <script type="text/javascript" src="bower_components/Chart.js/Chart.js"></script>
 <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/js/highcharts.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/js/highcharts-3d.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/js/highcharts-more.js"></script>
 <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 <script type="text/javascript" src="bower_components/topojson/topojson.js"></script>
