--- a/code/dev/parts/profile/two-factor-auth.html
+++ b/code/dev/parts/profile/two-factor-auth.html
@@ -4,11 +4,11 @@
     <h3 class="modal-title">Confirm</h3>
   </div>
   <div class="modal-body">
-    Are you sure you want to disable Two-Factor Authentication?
+    Are you sure you want to disable Two-Factor Authentication for your user account?
   </div>
   <div class="modal-footer">
-    <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
 
