--- a/code/dev/parts/reports/charts/mobile-base-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-base-traffic.html
@@ -21,12 +21,12 @@
   Loading
 </div>
 
-<div ng-if="!_loading">
+<div>
   <div class="alert alert-info" ng-if="!_loading && !hits.labels.length">
     No data to display
   </div>
 
-  <div ng-hide="!hits.labels || !hits.labels.length">
+  <div ng-class="{'invisible': hits.labels && _loading, 'hide': !_loading &&(!hits.labels || !hits.labels.length) }">
     <div style="min-width: 500px; min-height: 350px" line-chart ng-data="hits" ng-chart-options="chartOptions"></div>
   </div>
 </div>
