--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -66,7 +66,7 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <label for="search">Search:&nbsp;</label>
-                    <input type="text" class="form-control" id="search" placeholder="" ng-model="filter.filter.app_name"
+                    <input type="text" class="form-control" id="search" placeholder="" ng-model="filter.filter"
                            ng-change="checkFilterPage()">&nbsp;&nbsp;
                     <i class="glyphicon glyphicon-remove" ng-show="filter.filter != ''"
                        ng-click="filter.filter = ''"></i>
