--- a/code/dev/parts/reports/charts/mobile-base-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-base-traffic.html
@@ -26,8 +26,8 @@
     No data to display
   </div>
 
-  <div ng-class="{'invisible': hits.labels && _loading, 'hide': !_loading &&(!hits.labels || !hits.labels.length) }">
-    <div style="min-width: 500px; min-height: 350px" line-chart ng-data="hits" ng-chart-options="chartOptions"></div>
+  <div ng-class="{'invisible-chart-wrapper': hits.labels && _loading, 'hide': !_loading &&(!hits.labels || !hits.labels.length) }">
+    <div ng-if="!_loading" style="min-width: 500px; min-height: 350px" line-chart ng-data="hits" ng-chart-options="chartOptions"></div>
   </div>
 </div>
 
