--- a/code/index.html
+++ b/code/index.html
@@ -48,6 +48,8 @@
 <script type="text/javascript" src="bower_components/highcharts/js/highcharts.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/js/highcharts-3d.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/js/highcharts-more.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/js/modules/exporting.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/js/export-csv/export-csv.js"></script>
 <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 <script type="text/javascript" src="bower_components/topojson/topojson.js"></script>
 
