--- a/code/parts/menu/accounts-side.html
+++ b/code/parts/menu/accounts-side.html
@@ -24,5 +24,5 @@
 </a>
 <a ui-sref-active="active" ui-sref="index.usage.web" class="side-menu-item" ng-if="!userService.isUser()">
   <i class="glyphicon glyphicon-signal"></i>
-  Usage Reports
+  Usage Report
 </a>
