--- a/code/polymer/elements.html
+++ b/code/polymer/elements.html
@@ -1,20 +1,4 @@
-<html><head><!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
---><!--
-@license
-Copyright (c) 2014 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
---><meta charset="UTF-8"></head><body><div hidden="" by-vulcanize=""><script>(function () {
+<html><head><meta charset="UTF-8"></head><body><div hidden="" by-vulcanize=""><script>(function () {
 function resolve() {
 document.body.removeAttribute('unresolved');
 }
@@ -7005,9 +6989,7 @@ this.fire('dom-change');
 
 
 <dom-module id="paper-drawer-panel" assetpath="../../bower_components/paper-drawer-panel/">
-  
-
-  <template><style>
+  <style>
 /**
 @license
 Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
@@ -7161,6 +7143,8 @@ iron-selector:not(.narrow-layout) #main ::content [paper-drawer-toggle] {
   display: none;
 }
 </style>
+
+  <template>
     <iron-media-query id="mq" on-query-matches-changed="_onQueryMatchesChanged" query="[[_computeMediaQuery(forceNarrow, responsiveWidth)]]">
     </iron-media-query>
 
@@ -7947,9 +7931,7 @@ iron-selector:not(.narrow-layout) #main ::content [paper-drawer-toggle] {
 
 <dom-module id="paper-header-panel" assetpath="../../bower_components/paper-header-panel/">
 
-  
-
-  <template><style>
+  <style>
 /**
 @license
 Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
@@ -8071,6 +8053,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 }
 
 </style>
+
+  <template>
     <content id="headerContent" select="paper-toolbar, .paper-header"></content>
 
     <div id="mainPanel">
