--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -90,6 +90,7 @@
 <script type="text/javascript" src="js/portal/shared/crud/pagination.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter/filter.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/util/util.factory.js"></script>
+<script type="text/javascript" src="js/portal/shared/directives/ui-sref-active-if.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/resources/resources.module.js"></script>
 <script type="text/javascript" src="js/portal/resources/resources.config.js"></script>
