--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -180,21 +180,35 @@
                 <div class="form-group">
                   <label class="col-sm-6 control-label" >Hits</label>
                   <div class="col-sm-6">
-                    <div class="form-control text-right">{{ report.count }}</div>
+                    <div class="form-control text-right">{{ report.traffic.count }}</div>
                   </div>
                 </div>
 
                 <div class="form-group">
                   <label class="col-sm-6 control-label" >Sent</label>
                   <div class="col-sm-6">
-                    <div class="form-control text-right">{{ report.sent_bytes }}</div>
+                    <div class="form-control text-right">{{ report.traffic.sent_bytes }}</div>
                   </div>
                 </div>
 
                 <div class="form-group">
                   <label class="col-sm-6 control-label">Received</label>
                   <div class="col-sm-6">
-                    <div class="form-control text-right">{{ report.received_bytes }}</div>
+                    <div class="form-control text-right">{{ report.traffic.received_bytes }}</div>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label class="col-sm-6 control-label">BW Sent</label>
+                  <div class="col-sm-6">
+                    <div class="form-control text-right">{{ report.traffic.billable_sent_bps }}</div>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label class="col-sm-6 control-label">BW Received</label>
+                  <div class="col-sm-6">
+                    <div class="form-control text-right">{{ report.traffic.billable_received_bps }}</div>
                   </div>
                 </div>
 
@@ -246,32 +260,33 @@
 
           <div ng-if="showTraffic()">
 
-            <hr>
-            <h4>Traffic Total Per Billing Zone</h4>
-            <table class="table table-stripped table-condensed">
-              <thead>
-                <tr>
-                  <th>Zone</th>
-                  <th class="text-right">Hits</th>
-                  <th class="text-right">Traffic sent</th>
-                  <th class="text-right">Traffic received</th>
-                  <th class="text-right">BW sent</th>
-                  <th class="text-right">BW received</th>
-                </tr>
-              </thead>
-              <tbody ng-repeat="( zone, traffic ) in report.traffic_per_billing_zone">
-                <tr>
-                  <td>{{zone}}</td>
-                  <td class="text-right">{{traffic.count}}</td>
-                  <td class="text-right">{{traffic.sent_bytes}}</td>
-                  <td class="text-right">{{traffic.received_bytes}}</td>
-                  <td class="text-right">{{traffic.billable_sent_bps}}</td>
-                  <td class="text-right">{{traffic.billable_received_bps}}</td>
-                </tr>
-              </tbody>
-            </table>
-
             <div ng-if="showDomainsUsage()">
+
+              <hr>
+              <h4>Traffic Total Per Billing Zone</h4>
+              <table class="table table-stripped table-condensed">
+                <thead>
+                  <tr>
+                    <th>Zone</th>
+                    <th class="text-right">Hits</th>
+                    <th class="text-right">Traffic sent</th>
+                    <th class="text-right">Traffic received</th>
+                    <th class="text-right">BW sent</th>
+                    <th class="text-right">BW received</th>
+                  </tr>
+                </thead>
+                <tbody ng-repeat="( zone, traffic ) in report.traffic_per_billing_zone">
+                  <tr>
+                    <td>{{zone}}</td>
+                    <td class="text-right">{{traffic.count}}</td>
+                    <td class="text-right">{{traffic.sent_bytes}}</td>
+                    <td class="text-right">{{traffic.received_bytes}}</td>
+                    <td class="text-right">{{traffic.billable_sent_bps}}</td>
+                    <td class="text-right">{{traffic.billable_received_bps}}</td>
+                  </tr>
+                </tbody>
+              </table>
+
               <hr>
               <h4>Domains Usage</h4>
               <div ng-repeat="( domain, usage ) in report.domains_usage">
@@ -311,6 +326,20 @@
                               <label class="col-sm-6 control-label">Received</label>
                               <div class="col-sm-6">
                                 <div class="form-control text-right">{{ usage.received_bytes }}</div>
+                              </div>
+                            </div>
+
+                            <div class="form-group">
+                              <label class="col-sm-6 control-label">BW Sent</label>
+                              <div class="col-sm-6">
+                                <div class="form-control text-right">{{ usage.billable_sent_bps }}</div>
+                              </div>
+                            </div>
+
+                            <div class="form-group">
+                              <label class="col-sm-6 control-label">BW Received</label>
+                              <div class="col-sm-6">
+                                <div class="form-control text-right">{{ usage.billable_received_bps }}</div>
                               </div>
                             </div>
 
@@ -369,6 +398,8 @@
                               <th class="text-right">Hits</th>
                               <th class="text-right">Traffic sent</th>
                               <th class="text-right">Traffic received</th>
+                              <th class="text-right">BW sent</th>
+                              <th class="text-right">BW received</th>
                             </tr>
                           </thead>
                           <tbody ng-repeat="( zone, traffic ) in usage.traffic_per_billing_zone">
@@ -377,6 +408,8 @@
                               <td class="text-right">{{usage.count}}</td>
                               <td class="text-right">{{usage.sent_bytes}}</td>
                               <td class="text-right">{{usage.received_bytes}}</td>
+                              <td class="text-right">{{usage.billable_sent_bps}}</td>
+                              <td class="text-right">{{usage.billable_received_bps}}</td>
                             </tr>
                           </tbody>
                         </table>
@@ -398,6 +431,8 @@
                     <th class="text-right">Hits</th>
                     <th class="text-right">Traffic sent</th>
                     <th class="text-right">Traffic received</th>
+                    <th class="text-right">BW sent</th>
+                    <th class="text-right">BW received</th>
                   </tr>
                 </thead>
                 <tbody ng-repeat="account in report.accounts">
@@ -406,6 +441,8 @@
                     <td class="text-right">{{account.count}}</td>
                     <td class="text-right">{{account.sent_bytes}}</td>
                     <td class="text-right">{{account.received_bytes}}</td>
+                    <td class="text-right">{{account.billable_sent_bps}}</td>
+                    <td class="text-right">{{account.billable_received_bps}}</td>
                   </tr>
                 </tbody>
               </table>
